# STAR_shortcut_OSN_paper

./: .gitignore  README.md  pyproject.toml
01_fetching_processing/: EDDM.ipynb  LIRF.ipynb  LSGG.ipynb
01_procurement_processing/: EDDM.ipynb  LIRF.ipynb  LSGG.ipynb
02_analysis_of_flown_STAR_distances/: EDDM.ipynb  LIRF.ipynb  LSGG.ipynb
02_exploratory/: EDDM.ipynb  LIRF.ipynb  LSGG.ipynb
03_identification_of_influencing_factors/: 00_data_processing.ipynb  01_LSGG_lr.ipynb  02_EDDM_lr.ipynb  03_LIRF_lr.ipynb
99_plots/: data_procurement_preprocessing.ipynb  introduction.ipynb
EDDM/: EDDM_analysis.ipynb  EDDM_exploratory.ipynb  EDDM_fetching_processing.ipynb  fetching_processing.ipynb
LIRF/: LIRF_exploratory.ipynb  LIRF_fetching_processing.ipynb  fetching_processing.ipynb
LSGG/: LSGG_analysis.ipynb  LSGG_exploratory.ipynb  LSGG_fetching_processing.ipynb  belu3n.ipynb  fetching_processing.ipynb
model/: 00_data_processing.ipynb  01_LSGG_lr.ipynb  02_EDDM_lr.ipynb  03_LIRF_lr.ipynb  04_results_lr.ipynb
utils/: __init__.py  featuresfunctions.py  helperfunctions.py
