[tool.poetry]
name = "star-shortcut-osn-paper"
version = "0.1.0"
description = ""
authors = ["Jan <krum@zhaw.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
traffic = "^2.10.2"
plotly = "^5.23.0"
nbformat = "^5.10.4"
statsmodels = "^0.14.2"
ipykernel = "^6.29.5"
seaborn = "^0.13.2"


[tool.poetry.group.cm_cluster.dependencies]
cm-jupyter-eg-kernel-wlm = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
